--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,75 +1,18 @@
-/* Navbar.css */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .navbar {
-  background-color: #333; /* Dark background */
-  color: white; /* Text color */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  */
+} 
+.nav-link {
+  transition: color 0.3s; /* Smooth transition for hover */
 }
-
-.navbar-brand {
-  font-size: 1.5rem;
-  font-weight: bold;
+.nav-link:hover {
+  color: #ffc107;
 }
-
-.navbar-links {
-  list-style: none;
-  display: flex;
+.custom-nav-link {
+  font-weight: 600;
+}  
+.custom-nav-link:hover {
+  color: #218838; 
 }
-
-.navbar-links li {
-  margin-left: 20px; /* Space between links */
-}
-
-.navbar-links a {
-  color: white;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-.navbar-links a:hover {
-  color: #f0a500; /* Change color on hover */
-}
-
-/* Hamburger Menu Styles */
-.navbar-toggle {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.bar {
-  width: 25px;
-  height: 3px;
-  background-color: white;
-  margin: 3px 0;
-  transition: 0.3s;
-}
-
-/* Responsive Styles */
-@media (max-width: 768px) {
-  .navbar {
-      flex-direction: column; /* Stack items on smaller screens */
-      align-items: flex-start;
-  }
-  .navbar-links {
-      display: none; /* Hide links by default */
-      flex-direction: column; /* Stack links vertically */
-      margin-top: 10px;
-      width: 100%; /* Full width for the dropdown */
-  }
-  .navbar-links.active {
-      display: flex; /* Show links when active */
-  }
-  .navbar-toggle {
-      display: flex; /* Show hamburger icon */
-  }
+.active-link {
+  text-decoration: underline;
 }
